@@ -1,3 +1,9 @@
+2016-10-25  Mark Wielaard  <mjw@redhat.com>
+
+	* dwarf.h: Add DW_TAG_coarray_type, DW_TAG_generic_subrange,
+	DW_TAG_dynamic_type, DW_TAG_call_site, DW_TAG_call_site_parameter,
+	DW_TAG_skeleton_unit, DW_TAG_immutable_type.
+
 2016-10-27  Mark Wielaard  <mjw@redhat.com>
 
 	* dwarf_default_lower_bound.c: New file.
